# Copyright 2024-2025 Google LLC
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#      http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

load("@rules_cc//cc:cc_library.bzl", "cc_library")

package(
    default_visibility = ["//ink:__subpackages__"],
)

cc_library(
    name = "jni",
    tags = ["keep_dep"],
    deps = [
        ":brush_behavior_jni",
        ":brush_behavior_node_jni",
        ":brush_coat_jni",
        ":brush_family_jni",
        ":brush_jni",
        ":brush_paint_jni",
        ":brush_tip_jni",
        ":color_function_jni",
        ":easing_function_jni",
        ":stock_brushes_jni",
    ],
)

filegroup(
    name = "cinterop_headers",
    srcs = glob(["*_native.h"]),
)

cc_library(
    name = "cinterop",
    deps = [
        ":brush_behavior_node_native",
        ":easing_function_native",
    ],
)

cc_library(
    name = "brush_native_helper",
    srcs = ["brush_native_helper.cc"],
    hdrs = ["brush_native_helper.h"],
    deps = [
        "//ink/brush",
        "//ink/brush:brush_behavior",
        "//ink/brush:brush_coat",
        "//ink/brush:brush_family",
        "//ink/brush:brush_paint",
        "//ink/brush:brush_tip",
        "//ink/brush:color_function",
        "//ink/brush:easing_function",
        "//ink/brush:version",
        "@com_google_absl//absl/log:absl_check",
        "@com_google_absl//absl/status",
        "@com_google_absl//absl/status:statusor",
        "@com_google_absl//absl/strings",
    ],
)

cc_library(
    name = "brush_behavior_jni",
    srcs = ["brush_behavior_jni.cc"],
    tags = ["keep_dep"],
    deps = [
        ":brush_native_helper",
        "//ink/brush",
        "//ink/brush:brush_behavior",
        "//ink/jni/internal:jni_defines",
        "//ink/jni/internal:jni_string_util",
        "//ink/jni/internal:status_jni_helper",
        "//ink/types:duration",
        "@com_google_absl//absl/functional:overload",
        "@com_google_absl//absl/log:absl_check",
        "@com_google_absl//absl/status",
    ] + select({
        "@platforms//os:android": [],
        "//conditions:default": [
            "@rules_jni//jni",
        ],
    }),
    alwayslink = 1,
)

cc_library(
    name = "brush_behavior_node_jni",
    srcs = ["brush_behavior_node_jni.cc"],
    tags = ["keep_dep"],
    deps = [
        ":brush_behavior_node_native",
        ":brush_native_helper",
        "//ink/brush",
        "//ink/brush:brush_behavior",
        "//ink/jni/internal:jni_defines",
        "//ink/jni/internal:jni_string_util",
        "//ink/jni/internal:status_jni_helper",
        "//ink/types:duration",
        "@com_google_absl//absl/log:absl_check",
        "@com_google_absl//absl/status",
    ] + select({
        "@platforms//os:android": [],
        "//conditions:default": [
            "@rules_jni//jni",
        ],
    }),
    alwayslink = 1,
)

cc_library(
    name = "brush_behavior_node_native",
    srcs = ["brush_behavior_node_native.cc"],
    hdrs = ["brush_behavior_node_native.h"],
    deps = [
        ":brush_native_helper",
        "//ink/brush:brush_behavior",
        "@com_google_absl//absl/status",
    ],
)

cc_library(
    name = "brush_tip_jni",
    srcs = ["brush_tip_jni.cc"],
    tags = ["keep_dep"],
    deps = [
        ":brush_native_helper",
        "//ink/brush",
        "//ink/brush:brush_behavior",
        "//ink/brush:brush_tip",
        "//ink/geometry:angle",
        "//ink/geometry:vec",
        "//ink/jni/internal:jni_defines",
        "//ink/jni/internal:status_jni_helper",
        "//ink/types:duration",
        "@com_google_absl//absl/log:absl_check",
        "@com_google_absl//absl/status",
    ] + select({
        "@platforms//os:android": [],
        "//conditions:default": [
            "@rules_jni//jni",
        ],
    }),
    alwayslink = 1,
)

cc_library(
    name = "brush_paint_jni",
    srcs = ["brush_paint_jni.cc"],
    tags = ["keep_dep"],
    deps = [
        ":brush_native_helper",
        "//ink/brush:brush_paint",
        "//ink/brush:color_function",
        "//ink/geometry:angle",
        "//ink/geometry:mesh_format",
        "//ink/geometry:vec",
        "//ink/geometry/internal/jni:mesh_format_native_helper",
        "//ink/jni/internal:jni_defines",
        "//ink/jni/internal:jni_string_util",
        "//ink/jni/internal:status_jni_helper",
        "@com_google_absl//absl/container:flat_hash_set",
        "@com_google_absl//absl/log:absl_check",
        "@com_google_absl//absl/status",
        "@com_google_absl//absl/strings:string_view",
        "@com_google_absl//absl/time",
        "@com_google_absl//absl/types:span",
    ] + select({
        "@platforms//os:android": [],
        "//conditions:default": [
            "@rules_jni//jni",
        ],
    }),
    alwayslink = 1,
)

cc_library(
    name = "brush_coat_jni",
    srcs = ["brush_coat_jni.cc"],
    tags = ["keep_dep"],
    deps = [
        ":brush_native_helper",
        "//ink/brush",
        "//ink/brush:brush_coat",
        "//ink/brush:brush_paint",
        "//ink/brush:brush_tip",
        "//ink/geometry:mesh_format",
        "//ink/geometry/internal/jni:mesh_format_native_helper",
        "//ink/jni/internal:jni_defines",
        "@com_google_absl//absl/container:flat_hash_set",
        "@com_google_absl//absl/container:inlined_vector",
        "@com_google_absl//absl/log:absl_check",
        "@com_google_absl//absl/types:span",
    ] + select({
        "@platforms//os:android": [],
        "//conditions:default": [
            "@rules_jni//jni",
        ],
    }),
    alwayslink = 1,
)

cc_library(
    name = "stock_brushes_jni",
    srcs = ["stock_brushes_jni.cc"],
    tags = ["keep_dep"],
    deps = [
        ":brush_native_helper",
        "//ink/brush",
        "//ink/brush:brush_coat",
        "//ink/brush:brush_family",
        "//ink/brush:brush_paint",
        "//ink/brush:brush_tip",
        "//ink/brush:stock_brushes",
        "//ink/jni/internal:jni_defines",
        "//ink/jni/internal:jni_string_util",
        "//ink/jni/internal:status_jni_helper",
        "//ink/types:duration",
        "@com_google_absl//absl/functional:overload",
        "@com_google_absl//absl/log:absl_check",
        "@com_google_absl//absl/status:statusor",
        "@com_google_absl//absl/types:span",
    ] + select({
        "@platforms//os:android": [],
        "//conditions:default": [
            "@rules_jni//jni",
        ],
    }),
    alwayslink = 1,
)

cc_library(
    name = "brush_family_jni",
    srcs = ["brush_family_jni.cc"],
    tags = ["keep_dep"],
    deps = [
        ":brush_native_helper",
        "//ink/brush",
        "//ink/brush:brush_coat",
        "//ink/brush:brush_family",
        "//ink/brush:brush_paint",
        "//ink/brush:brush_tip",
        "//ink/jni/internal:jni_defines",
        "//ink/jni/internal:jni_string_util",
        "//ink/jni/internal:status_jni_helper",
        "//ink/types:duration",
        "@com_google_absl//absl/functional:overload",
        "@com_google_absl//absl/log:absl_check",
        "@com_google_absl//absl/status:statusor",
        "@com_google_absl//absl/types:span",
    ] + select({
        "@platforms//os:android": [],
        "//conditions:default": [
            "@rules_jni//jni",
        ],
    }),
    alwayslink = 1,
)

cc_library(
    name = "brush_jni",
    srcs = ["brush_jni.cc"],
    tags = ["keep_dep"],
    deps = [
        ":brush_native_helper",
        "//ink/brush",
        "//ink/brush:brush_family",
        "//ink/color",
        "//ink/color/internal/jni:color_jni_helper",
        "//ink/jni/internal:jni_defines",
        "//ink/jni/internal:status_jni_helper",
        "@com_google_absl//absl/log:absl_check",
    ] + select({
        "@platforms//os:android": [],
        "//conditions:default": [
            "@rules_jni//jni",
        ],
    }),
    alwayslink = 1,
)

cc_library(
    name = "color_function_jni",
    srcs = ["color_function_jni.cc"],
    tags = ["keep_dep"],
    deps = [
        ":brush_native_helper",
        "//ink/brush:color_function",
        "//ink/color",
        "//ink/color/internal/jni:color_jni_helper",
        "//ink/jni/internal:jni_defines",
        "//ink/jni/internal:status_jni_helper",
        "@com_google_absl//absl/functional:overload",
        "@com_google_absl//absl/log:absl_check",
        "@com_google_absl//absl/status",
        "@com_google_absl//absl/strings",
    ] + select({
        "@platforms//os:android": [],
        "//conditions:default": [
            "@rules_jni//jni",
        ],
    }),
    alwayslink = 1,
)

cc_library(
    name = "easing_function_jni",
    srcs = ["easing_function_jni.cc"],
    tags = ["keep_dep"],
    deps = [
        ":easing_function_native",
        "//ink/jni/internal:jni_defines",
        "//ink/jni/internal:status_jni_helper",
        "@com_google_absl//absl/log:absl_check",
    ] + select({
        "@platforms//os:android": [],
        "//conditions:default": [
            "@rules_jni//jni",
        ],
    }),
    alwayslink = 1,
)

cc_library(
    name = "easing_function_native",
    srcs = ["easing_function_native.cc"],
    hdrs = ["easing_function_native.h"],
    deps = [
        ":brush_native_helper",
        "//ink/brush:easing_function",
        "//ink/geometry:point",
        "@com_google_absl//absl/functional:overload",
        "@com_google_absl//absl/status",
    ],
)
